# pyALDIC

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  gui_aldic.m  main_aldic.m  pyproject.toml  run_aldic.m  test_aldic_synthetic.m
config/: dicpara_default.m
staq-dic-python/: .gitignore  README.md  pyproject.toml
staq-dic-python/docs/plans/: 2026-03-26-synthetic-integration-tests.md  2026-03-27-masked-subset-icgn.md  2026-03-28-adaptive-refinement-framework.md  2026-03-29-brush-region-refinement.md  2026-04-05-mesh-overlay-and-lifecycle.md  2026-04-06-roi-drawing-ux-fixes.md
staq-dic-python/scripts/: aldic_vs_local.py  bench_block8.py  bench_fill_nan.py  bench_regression.py  bench_scaling.py  bench_subpb2_opts.py  bench_window_splitting.py  bench_ws_report.py  benchmark_admm.py  benchmark_local_icgn.py  benchmark_pipeline.py  benchmark_quadtree.py  compare_local_vs_aldic.py  comprehensive_comparison.py  debug_convergence.py  debug_single_node.py  diagnose_gt_convention.py  diagnose_icgn.py  diagnose_icgn_detail.py  diagnose_large_translation.py  diagnose_tol.py  diagnostic_report.py  evaluate_modes.py  export_matlab_intermediates.m  profile_detailed.py  profile_icgn.py  report_4way_mesh_solver_comparison.py  report_adaptive_refinement.py  report_brush_refinement.py  report_brush_refinement_warp.py  report_bubble_refinement_comparison.py  report_complex_mask_refinement.py  report_fft_benchmark.py  report_incremental_mask_warp.py  report_local_vs_aldic_comparison.py  report_local_vs_aldic_final.py  report_mesh_behavior.py  report_multi_topology_refinement.py  report_pipeline_validation.py  report_strain_window_uniform_shear.py  (+7 more)
staq-dic-python/src/staq_dic/: __init__.py
staq-dic-python/src/staq_dic/core/: __init__.py  _brush_warp.py  config.py  data_structures.py  pipeline.py
staq-dic-python/src/staq_dic/export/: __init__.py  export_csv.py  export_mat.py  export_npz.py  export_params.py  export_png.py
staq-dic-python/src/staq_dic/gui/: __init__.py  app.py  app_state.py  icons.py  strain_window.py  theme.py
staq-dic-python/src/staq_dic/gui/controllers/: image_controller.py  pipeline_controller.py  roi_controller.py  strain_controller.py  viz_controller.py
staq-dic-python/src/staq_dic/gui/dialogs/: batch_import_dialog.py  export_dialog.py
staq-dic-python/src/staq_dic/gui/panels/: __init__.py  canvas_area.py  left_sidebar.py  right_sidebar.py  strain_canvas.py
staq-dic-python/src/staq_dic/gui/widgets/: __init__.py  collapsible_section.py  color_range.py  colorbar_overlay.py  console_log.py  field_selector.py  frame_navigator.py  image_list.py  mesh_overlay.py  param_panel.py  physical_units_widget.py  roi_toolbar.py  strain_field_selector.py  strain_param_panel.py  strain_viz_panel.py  velocity_settings.py
staq-dic-python/src/staq_dic/io/: __init__.py  image_ops.py  io_utils.py
staq-dic-python/src/staq_dic/mesh/: __init__.py  generate_mesh.py  geometric_data.py  mesh_setup.py  refinement.py
staq-dic-python/src/staq_dic/mesh/criteria/: __init__.py  manual_selection.py  mask_boundary.py  posterior_error.py  roi_edge.py
staq-dic-python/src/staq_dic/solver/: __init__.py  fem_assembly.py  icgn_solver.py  icgn_subpb1.py  icgn_warp.py  init_disp.py  integer_search.py  local_icgn.py  numba_kernels.py  outlier_detection.py  subpb1_solver.py  subpb2_solver.py
staq-dic-python/src/staq_dic/strain/: __init__.py  apply_strain_type.py  comp_def_grad.py  compute_strain.py  nodal_strain_fem.py  smooth_field.py
staq-dic-python/src/staq_dic/utils/: __init__.py  interpolation.py  outlier_detection.py  region_analysis.py  validation.py
staq-dic-python/tests/: conftest.py  test_core.py  test_gui_app_state.py  test_gui_brush_clear_cascade.py  test_gui_brush_lockout.py  test_gui_canvas_preview_refinement.py  test_gui_canvas_results_mesh.py  test_gui_color_range_auto.py  test_gui_image_controller.py  test_gui_pipeline_incomplete_roi_dialog.py  test_gui_pipeline_refinement_wiring.py  test_gui_pipeline_show_deformed_persistence.py  test_gui_refinement_levels.py  test_gui_roi_controller.py  test_gui_roi_toolbar.py  test_gui_viz_controller.py  test_image_ops.py  test_interpolation.py  test_warp_mask.py
staq-dic-python/tests/fixtures/matlab_checkpoints/: checkpoint_S2b.mat  checkpoint_S3_frame2.mat  checkpoint_S5_frame2.mat  checkpoint_S5_frame3.mat  checkpoint_S6_frame2.mat  checkpoint_S6_frame3.mat  checkpoint_S8.mat  ground_truth.mat
staq-dic-python/tests/test_export/: conftest.py  test_export_csv.py  test_export_mat.py  test_export_npz.py  test_export_params.py  test_export_png.py  test_export_utils.py
staq-dic-python/tests/test_gui/: _helpers.py  test_app_state.py  test_app_state_brush.py  test_open_strain_window.py  test_pipeline_controller_brush.py  test_pipeline_masks.py  test_roi_drawing_ux.py  test_strain_canvas.py  test_strain_controller.py  test_strain_field_selector.py  test_strain_param_panel.py  test_strain_viz_panel.py  test_strain_window.py
staq-dic-python/tests/test_integration/: test_admm_invariants.py  test_cross_validation.py  test_pipeline.py  test_refinement_pipeline.py  test_refinement_warmstart.py  test_synthetic.py
staq-dic-python/tests/test_mesh/: test_build_policy.py  test_criteria_brush.py  test_criteria_manual.py  test_criteria_mask.py  test_criteria_posterior.py  test_criteria_roi_edge.py  test_generate_mesh.py  test_mark_edge.py  test_mesh_setup.py  test_qrefine.py  test_refinement.py
staq-dic-python/tests/test_pipeline/: test_brush_warp.py
staq-dic-python/tests/test_reports/: test_strain_window_report.py
staq-dic-python/tests/test_solver/: test_fem_assembly.py  test_icgn_solver.py  test_icgn_warp.py  test_init_disp.py  test_integer_search.py  test_local_icgn.py  test_masked_subset.py  test_outlier_detection.py  test_subpb1_solver.py  test_subpb2_solver.py
staq-dic-python/tests/test_strain/: test_apply_strain_type.py  test_comp_def_grad.py  test_compute_strain.py  test_nodal_strain_fem.py  test_smooth_field.py
staq-dic-python/tests/test_unit/: test_cumulative_composition.py  test_frame_schedule.py
(+370 files in other folders)
