[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "al-dic"
version = "0.1.1"
description = "AL-DIC: Augmented Lagrangian Digital Image Correlation with adaptive quadtree mesh"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    { name = "Zixiang (Zach) Tong", email = "zachtong@utexas.edu" },
]
keywords = [
    "digital-image-correlation",
    "DIC",
    "experimental-mechanics",
    "strain-measurement",
    "augmented-lagrangian",
    "ADMM",
    "quadtree-mesh",
    "inverse-compositional-gauss-newton",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "opencv-python>=4.7",
    "numba>=0.57",
    "scikit-image>=0.20",
    "PySide6>=6.6.0",
    "imageio>=2.28",
]

[project.urls]
Homepage = "https://github.com/zachtong/pyALDIC"
Repository = "https://github.com/zachtong/pyALDIC"
Issues = "https://github.com/zachtong/pyALDIC/issues"

[project.scripts]
al-dic = "al_dic.gui.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "matplotlib>=3.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/al_dic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
