[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "al-dic"
version = "0.3.0"
description = "AL-DIC: Augmented Lagrangian Digital Image Correlation with adaptive quadtree mesh"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    { name = "Zixiang (Zach) Tong", email = "zachtong@utexas.edu" },
]
keywords = [
    "digital-image-correlation",
    "DIC",
    "experimental-mechanics",
    "strain-measurement",
    "augmented-lagrangian",
    "ADMM",
    "quadtree-mesh",
    "inverse-compositional-gauss-newton",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "opencv-python>=4.7",
    "numba>=0.57",
    "scikit-image>=0.20",
    "PySide6>=6.6.0",
    "imageio>=2.28",
    # Core runtime: used by gui/panels/canvas_area.py,
    # gui/widgets/colorbar_overlay.py, gui/controllers/viz_controller.py,
    # export/export_png.py, export/export_animation.py
    "matplotlib>=3.6",
]

[project.urls]
Homepage = "https://github.com/zachtong/pyALDIC"
Repository = "https://github.com/zachtong/pyALDIC"
Issues = "https://github.com/zachtong/pyALDIC/issues"

[project.scripts]
al-dic = "al_dic.gui.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/al_dic"]

# Explicit allowlist for sdist contents. Hatchling's default behaviour
# is "everything not gitignored", which swept in local presentation
# files (173 MB of .pptx assets) and pushed the sdist well over PyPI's
# 100 MB per-file cap. The list below keeps the sdist to the minimum a
# downstream consumer actually needs to install and run tests.
[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/CODE_OF_CONDUCT.md",
    "/.github/workflows",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "perf: performance/throughput tests -- excluded from CI (runner CPU varies)",
]

[tool.coverage.run]
source = ["al_dic"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
omit = [
    # Numba JIT kernels: coverage.py cannot trace LLVM-compiled code
    "src/al_dic/solver/numba_kernels.py",
]
